--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-phone-number-input": "^3.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.1.0",
